# CodeReviewAI

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  schemas.py
utils/: github_api.py  openai_api.py
